# ktir-cpu

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTES_mlir_parser.md  README.md  pyproject.toml
.claude/skills/: ktir-dialect.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  user_story.md
.github/workflows/: ci-rust.yml  ci.yml  rust-conformance.yml
benchmarks/: README.md  bench_indirect_emul_time.py  bench_utils.py
benchmarks/configs/: indirect_emul.toml
docs/: cross_core_scheduling.md  gap_analysis.md  latency.md  lx_tracking.md
examples/ktir/: ffn_swiglu.mlir  ffn_swiglu_4core.mlir  reduce_generic.mlir  ring_reduce.mlir  ring_reduce_inner_loop.mlir  softmax_wide.mlir
examples/latency/: matmul_small.mlir  ring_reduce_multi_group.mlir  rmsnorm_4core_2x2.mlir  rmsnorm_4core_4x1.mlir  softmax_small.mlir
examples/rfc/: add-with-control-flow.mlir  distributed-view-copy-dynamic-s16.mlir  distributed-view-copy-dynamic-s32.mlir  distributed-view-copy-dynamic.mlir  distributed-view-copy-rowmerge-dynamic.mlir  distributed-view-copy.mlir  indirect-access-copy.mlir  indirect-scatter.mlir  paged-tensor-copy.mlir  paged-tensor-write.mlir
examples/triton-ktir/: indexed_add.mlir  layernorm_fwd_ktir.mlir  matmul_fwd_ktir.mlir  paged_attention.mlir  sdpa_2d.mlir  softmax_fwd_ktir.mlir  softmax_lx_fused.ktir  softmax_lx_fused_calls.ktir  vector_add_dynamic_ktir.mlir  vector_add_ktir.mlir
ktir_cpu/: __init__.py  affine.py  dtypes.py  grid.py  interpreter.py  ir_types.py  latency.py  memory.py  parser.py  parser_ast.py  parser_utils.py
ktir_cpu/bindings/: parser.py
ktir_cpu/dialects/: __init__.py  _helpers.py  arith_ops.py  func_ops.py  ktdp_helpers.py  ktdp_ops.py  linalg_ops.py  math_ops.py  registry.py  scf_ops.py  tensor_ops.py
ktir_cpu/mlir_frontend/: parser.py
ktir_cpu/ops/: __init__.py  _helpers.py  arith_ops.py  comm_ops.py  control_ops.py  grid_ops.py  math_ops.py  memory_ops.py
notebooks/: demo_gen_mlir.py  demo_helpers.py  latency_demo.ipynb
rust/: .gitignore  Cargo.toml  PERFORMANCE.md  README.md  TODOs.md
rust/crates/ktir-core/: Cargo.toml
rust/crates/ktir-core/src/: affine.rs  codec.rs  dtypes.rs  fxhash.rs  ir.rs  lib.rs  memref.rs  parser.rs  parser_ast.rs  tile.rs
rust/crates/ktir-emulator/: Cargo.toml  build.rs
rust/crates/ktir-emulator/benches/: smollm2_bench.rs
rust/crates/ktir-emulator/examples/: bench.rs  ktir_diff_run.rs
rust/crates/ktir-emulator/shaders/: nax_gemv.metal  nax_matmul.metal  simd_matmul.metal
rust/crates/ktir-emulator/src/: blas.rs  comm.rs  comm_sched.rs  env.rs  interpreter.rs  latency.rs  lib.rs  metal.rs  ops_memory.rs  program.rs  resident.rs  resident_runner.rs  segmented.rs
rust/crates/ktir-emulator/src/dialects/: arith.rs  func.rs  ktdp.rs  ktdp_comm.rs  ktdp_extra.rs  linalg.rs  math.rs  mod.rs  scf.rs  tensor.rs
rust/crates/ktir-emulator/src/machine_state/: context.rs  memory.rs  mod.rs
rust/crates/ktir-emulator/tests/: bench_amx_vs_metal.rs  bench_py_vs_rust.rs  dispatch_coverage.rs  e2e_layernorm.rs  e2e_matmul.rs  e2e_real_forward.rs  e2e_smollm2.rs  end_to_end.rs  flash_attn_golden.rs  flash_attn_timing.rs  fuse_run_e2e.rs  fuse_run_smollm2.rs  gpu_dispatch_floor.rs  head_rewrite_e2e.rs  head_rewrite_golden.rs  metal_conformance.rs  parser_exec.rs  port_affine.rs  port_ast.rs  port_dialects_exec.rs  port_distributed_view.rs  port_dtypes.rs  port_examples.rs  port_grid_scheduler.rs  port_indirect_access.rs  port_interpreter.rs  port_ktir_cpu.rs  port_ktir_simple.rs  port_latency.rs  port_latency_modeling.rs  port_lx_scoping.rs  port_ops.rs  port_parse.rs  port_parser_errors.rs  port_parser_utils.rs  port_spec_gaps.rs  port_tile.rs
rust/crates/ktir-emulator/tests/equiv/: diff_py_vs_rust.py
rust/crates/ktir-emulator/tests/fixtures/: README.md  bench_e2e_hermetic.py  gen_golden.py
rust/crates/ktir-optimizer/: Cargo.toml
rust/crates/ktir-optimizer/src/: flash_attn.rs  fusion.rs  head_rewrite.rs  lib.rs  tile_coalesce.rs
rust/docs/: port-map.md
tests/: conftest.py  test_affine.py  test_alloc_cache.py  test_ast.py  test_block_gather_fast_path.py  test_boxset_fastpath.py  test_dialects_exec.py  test_dialects_parse.py  test_distributed_view.py  test_dtypes.py  test_examples.py  test_grid_scheduler.py  test_indirect_access.py  test_interpreter.py  test_ktir_cpu.py  test_ktir_simple.py  test_latency.py  test_latency_modeling.py  test_lx_scoping.py  test_ops.py  test_parser_errors.py  test_parser_utils.py  test_ring_reduce.py  test_spec_gaps.py  test_tile.py
tests/bindings/: conftest.py  test_bindings_adapt.py  test_examples_adapt.py
tests/mlir_frontend/: conftest.py  test_distributed_view_adapt.py  test_examples_adapt.py  test_indirect_access_adapt.py  test_parse_adapt.py  test_registry_consistency.py  test_tile_future_adapt.py
